Got the formatting and spacing of the table correct

--- a/frontend/bonds-for-success/src/app/mentee-mentor-table/mentee-mentor-table.component.scss
+++ b/frontend/bonds-for-success/src/app/mentee-mentor-table/mentee-mentor-table.component.scss
@@ -17,3 +17,13 @@
 .cdk-drop-list-dragging .mat-row:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+table {
+  width: 100%;
+}
+
+th.mat-header-cell, td.mat-cell {
+    text-align: center;
+    border: 1px solid #CCC;
+    padding: 0 !important;
+}
